chroe: add storage cloudinary integration
