# backend/app/Http/Resources/PaketResource.php
@@ -28,7 +28,8 @@ class PaketResource extends JsonResource
             'harga_per_porsi' => $this->harga_per_porsi,
             'kapasitas_produksi' => $this->kapasitas_produksi,
             'deskripsi' => $this->deskripsi,
-            'gambar' => $this->gambar,
+            'thumbnail' => $this->thumbnail,
+            'images' => $this->whenLoaded('images', fn () => $this->images->pluck('image_url')),
             'is_best_seller' => $this->is_best_seller,
             'created_at' => $this->created_at,
             'updated_at' => $this->updated_at,
